# DrAI

./: .gitignore  .gitmodules  ATTENTION  LICENSE-MIT  README.MD  README.de.md  README.md  a1_drake_without_cover.asm  a_drake.asm  a_drake.cfg  a_drake_mk1.asm  a_drake_mk1.cfg  a_drake_mk2.asm  a_drake_mk2.cfg  a_drake_mk2_2.asm  a_drake_mk2_2.cfg  a_drake_without_cover.asm  a_drake_without_cover.cfg  websites.txt
code/: README.MD  README.md
code/drake_ctrl/: Cargo.toml
code/drake_ctrl/config/: drake.json
code/drake_ctrl/src/: config.rs  lib.rs  main.rs  robot.rs  routines.rs  servo_table.rs  table.rs  user_terminal.rs
construction/: 1_side_axis_stepper_connector.par  1b_cover_front_right.par  Igus_x-Achse_hub_605,5.par  README.MD  README.md  a1_DrAi.asm  a1_DrAi.cfg  a1_side_axis_connector.asm  a1_side_axis_connector.cfg  a2_DrAi.asm  a2_DrAi.cfg  a2_side_axis_connector_bottom.asm  a2_side_axis_connector_bottom.cfg  a3_side_axis_connector_top.asm  a3_side_axis_connector_top.cfg
documentation/: .$user_process.drawio.bkp  DA13-DrAI-2023_24-Lastenheft.doc  Diplomarbeitsbeschreibung.url  Partslist.xlsx  Projektbeschreibung.docx  README.MD  README.md  ToBuy.txt  Workhours.xlsx  costs.xlsx  dokumentation.de.md  networking.md  setup.md  testing.md  updating.md  ~$AI - Termine und Info.docx
electronics/: README.MD
sketches/: list.xlsx
standard/: N10_Alu_Rohr_40x40x2x350.par  N11_[DIN]_Rod_8h7x340.par  N12_Trapezoidal_Spindle_M8x300.par  N12_Trapezoidal_Spindle_M8x330.par  N13_[DIN]_Rod_8h7x520.par  N14_Trapezoidal_Spindle_M8_530.par  N15_feder.par  N15_feder.step  (+32 more)
(+1218 files in other folders)
