[package]
name = "drake_ctrl"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
clap = "4.4.11"
env_logger = "0.11.3"
log = "0.4.20"
indicatif = "0.17.7"
serde = "1.0.193"
serde_json = "1.0.108"

# font-kit = "0.12.0"
# raqote = "0.8.3"

syact = { path = "../syact" }
sybot = { path = "../sybot" }

[features]
rasp = [ "syact/rasp", "sybot/rasp" ]