[package]
name = "drake_ctrl"
version = "0.1.0-alpha"
edition = "2021"
default-run = "drake_ctrl"

[lib]
name = "drake"
path = "src/lib.rs"

[[bin]]
name = "drake_ctrl"
path = "bin/drake_ctrl.rs"

[[bin]]
name = "drake_table_test"
path = "bin/drake_table_test.rs"

[dependencies]
clap = "4.4.11"
env_logger = "0.11.3"
log = "0.4.20"
indicatif = "0.17.7"
serde = "1.0.193"
serde_json = "1.0.108"

# font-kit = "0.12.0"
# raqote = "0.8.3"

syact = { path = "../syact" }
sybot = { path = "../sybot" }
pwm-pca9685 = { version = "1.0.0", features = [ "std" ] }
rppal = { version = "0.17.1", features = [ "hal" ], optional = true }

[features]
default = [ "rasp" ]
rasp = [ "syact/rasp", "sybot/rasp", "dep:rppal" ]